Added ingredients list to ramen.html

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -12,5 +12,17 @@
     <h2>Description</h2>
     <p>Ramen is a Japenese noodle soup. It consists of Chinese-style wheat noodles served in a meat or (occasionally) fish-based broth, often flavored with soy sauce or miso, and uses toppings such as sliced pork (叉焼, chāshū), nori (dried seaweed), menma, and scallions.</p>
     <p>Nearly every region in Japan has its own variation of ramen, such as the tonkotsu (pork bone broth) ramen of Kyushu, and the miso ramen of Hokkaido. Mazemen is a ramen dish that is not served in a soup, but rather with a sauce (such as tare).</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>2</strong> chicken breasts</li>
+        <li><strong>1 tbsp</strong> unsalted butter</li>
+        <li><strong>2 tsp</strong> vegetable oil</li>
+        <li><strong>2 tsp</strong> fresh ginger</li>
+        <li><strong>3 tbsp</strong> soy sauce</li>
+        <li><strong>4 cups</strong> chicken stock</li>
+        <li><strong>1 oz</strong> shitake mushrooms</li>
+        <li><strong>2</strong> large eggs</li>
+        <li><strong>2 packs</strong> dried ramen noodles</li>
+    </ul>
 </body>
 </html>
