Added steps to ramen.html

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -24,5 +24,12 @@
         <li><strong>2</strong> large eggs</li>
         <li><strong>2 packs</strong> dried ramen noodles</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Cook the chicken:</strong> Preheat oven to 375F. Season chicken with salt and pepper. Melt butter on skillet, add chicken and cook until golden brown on both sides. Then put chicken in the oven.</li>
+        <li><strong>Make the ramen broth:</strong> Heat oil in large pan. Add garlic and ginger, cook until softened. Add soy sauce and stir. Add chicken stock and bring to boil. Add mushrooms and season with salt to taste.</li>
+        <li><strong>Make soft boiled eggs:</strong> Fill pot with enough water to cover egss, bring to boil. Lower eggs into boiling water and let simmer for 7 minutes.</li>
+        <li><strong>Assemble ramen bowls:</strong> Chop scallions. Slice chicken into thin pieces. When eggs are finished cooking, add the noodles into the boiling water. Cook for 2-3 minutes, then divide into 2 large bowls. Add sliced chicken and ramen broth. Put toppings on and serve immediately. Enjoy!</li>
+    </ol>
 </body>
 </html>
