--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -10,7 +10,7 @@
     <h1>Ramen</h1>
     <img src="ramen.jpg">
     <h2>Description</h2>
-    <p>Ramen is a Japenese noodle soup. It consists of Chinese-style wheat noodles served in a meat or (occasionally) fish-based broth, often flavored with soy sauce or miso, and uses toppings such as sliced pork (叉焼, chāshū), nori (dried seaweed), menma, and scallions.</p>
+    <p>Ramen is a Japanese noodle soup. It consists of Chinese-style wheat noodles served in a meat or (occasionally) fish-based broth, often flavored with soy sauce or miso, and uses toppings such as sliced pork (叉焼, chāshū), nori (dried seaweed), menma, and scallions.</p>
     <p>Nearly every region in Japan has its own variation of ramen, such as the tonkotsu (pork bone broth) ramen of Kyushu, and the miso ramen of Hokkaido. Mazemen is a ramen dish that is not served in a soup, but rather with a sauce (such as tare).</p>
     <h2>Ingredients</h2>
     <ul>
